--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>$ g42ftw # contact</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <title>$ g42ftw</title>
+  <script>
+		var t = ["$ g42ftw", "$ g42ft", "$ g42f", "$ g42", "$ g42", "$ g42", "$ g42f", "$ g42ft", "$ g42ftw", "$ g42ftw"];
+		var c = 0;
+		var i = setInterval(change, 2000);
+
+		function change() {
+			document.title = t[c];
+			c++;
+			if (c >= t.length) {
+				c = 0;
+			}
+		}
+	</script>
 </head>
-<body style="background-color: #121212; font-family: Bahnschrift; src:local(font.ttf)">
+<body style="font-family: Bahnschrift; src:local(font.ttf)">
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link home" href="index.html">🏠</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="bio.html">Bio</a>
+          <a class="nav-link bio" href="bio.html">📃</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link projects" href="projects.html">🚧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" style="box-shadow: 0rem 0rem 2rem 0.5rem rgba(0, 113, 255, .4)">Contact</a>
+          <a class="nav-link contact active" href="#">🤙 Contact</a>
         </li>
       </ul>
 
       <div class="row" style="margin: 1rem; margin-left: 5rem; margin-right: 5rem;">
         <div class="col-sm-3">
             <a href="https://t.me/g42ftw" style="text-decoration: none"><div class="card text-white bg-primary mb-3" style="max-width: 18rem">
-                <div class="card-header">Messaging</div>
+                <div class="card-header"><center>Telegram</center></div>
                 <div class="card-body">
-                  <h5 class="card-title">Telegram</h5>
-                  <p class="card-text"><i>The first place where you should try to contact me in.</i></p>
+                  <h5 class="card-title"><center>@g42ftw</center></h5>
+                  <p class="card-text"><center>Best place to talk where.</center></p>
+                  <p class="card-text"><center>High availability.</center></p>
                 </div>
               </div>
             </a>
         </div>
         <div class="col-sm-3">
-            <a href="mailto:me@g42ftw.cf" style="text-decoration: none"><div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-                <div class="card-header">E-mail</div>
-                <div class="card-body">
-                  <h5 class="card-title">me@g42ftw.cf</h5>
-                  <p class="card-text">If you don't have Telegram, then send me a quick e-letter, the response time is as quick as in Telegram.</p>
-                </div>
+          <a href="https://discord.com" style="text-decoration: none"><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+              <div class="card-header"><center>Discord</center></div>
+              <div class="card-body">
+                <h5 class="card-title"><center>г42#7170</center></h5>
+                <p class="card-text"><center>I don't use Discord as much as Telegram, don't expect me to answer you quickly.</center></p>
+                <p class="card-text"><center>Average availability.</center></p>
               </div>
-            </a>
-        </div>
+            </div>
+          </a>
+      </div>
         <div class="col-sm-3">
-            <a href="https://discord.com" style="text-decoration: none"><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-                <div class="card-header">Discord</div>
+            <a href="mailto:me@g42ftw.cf" style="text-decoration: none"><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                <div class="card-header"><center>Personal e-mail</center></div>
                 <div class="card-body">
-                  <h5 class="card-title">г42#7170</h5>
-                  <p class="card-text">Also I rarely visit Discord, so you can send me a friend request to talk here.</p>
-                </div>
-              </div>
-            </a>
-        </div>
-        <div class="col-sm-3">
-            <a href="https://steamcommunity.com/id/g42ftw" style="text-decoration: none"><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-                <div class="card-header">Steam</div>
-                <div class="card-body">
-                  <h5 class="card-title">G42</h5>
-                  <p class="card-text">Please, send PM in Steam only if other services are unavailable for you.</p>
+                  <h5 class="card-title"><center>me@g42ftw.cf</center></h5>
+                  <p class="card-text"><center>Send letters to this box only if you can't use Telegram/Discord.</center></p>
+                  <p class="card-text"><center>High availability.</center></p>
                 </div>
               </div>
             </a>
