--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>$ g42ftw #</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <title>$ g42ftw</title>
+  <script>
+		var t = ["$ g42ftw", "$ g42ft", "$ g42f", "$ g42", "$ g42", "$ g42", "$ g42f", "$ g42ft", "$ g42ftw", "$ g42ftw"];
+		var c = 0;
+		var i = setInterval(change, 2000);
+
+		function change() {
+			document.title = t[c];
+			c++;
+			if (c >= t.length) {
+				c = 0;
+			}
+		}
+	</script>
 </head>
-<body style="background-color: #121212; font-family: Bahnschrift; src:local(font.ttf)">
+<body style="font-family: Bahnschrift; src:local(font.ttf)">
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" style="box-shadow: 0rem 0rem 2rem 0.5rem rgba(0, 113, 255, .4)">Home</a>
+          <a class="nav-link home active" href="#">🏠 Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="bio.html">Bio</a>
+          <a class="nav-link bio" href="bio.html">📃</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link projects" href="projects.html">🚧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link contact" href="contact.html">🤙</a>
         </li>
       </ul>
 
-      <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-keyboard="false" data-bs-pause="false" style="margin-left: 15rem; margin-right: 15rem; margin-top: 1.5rem;">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="banner-welcome.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="banner-fact.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
-            <img src="banner-limitations.png" class="d-block w-100">
-          </div>
+      <div class="container" style="margin-top: 10rem;">
+        <div class="jumbotron">
+          <h1 class="display-4">🙋‍♂️ Welcome!</h1>
+          <p class="lead">You're the only one who visited this page for the first time after it being renovated again.</p>
+          <hr class="my-4">
+          <p style="opacity: 10%;">Here also could be dragons 🐲, but I forgot to add them 😅</p>
+          <p>Anyway, forget about 🐲 and better go check other tabs.</p>
         </div>
       </div>
 
