--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 	</script>
 </head>
 <body style="font-family: Bahnschrift; src:local(font.ttf)">
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link home" href="index.html">🏠</a>
         </li>
@@ -30,7 +30,7 @@
           <a class="nav-link projects" href="projects.html">🚧</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link contact active" href="#">🤙 Contact</a>
+          <a class="nav-link contact active" href="#">🤙</a>
         </li>
       </ul>
 
