--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	</script>
 </head>
 <body style="font-family: Bahnschrift; src:local(font.ttf)">
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link home active" href="#">🏠 Home</a>
+          <a class="nav-link home active" href="#">🏠</a>
         </li>
         <li class="nav-item">
           <a class="nav-link bio" href="bio.html">📃</a>
