--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 	</script>
 </head>
 <body style="font-family: Bahnschrift; src:local(font.ttf)">
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link home" href="index.html">🏠</a>
         </li>
@@ -27,7 +27,7 @@
           <a class="nav-link bio" href="bio.html">📃</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link projects active" href="#">🚧 Projects</a>
+          <a class="nav-link projects active" href="#">🚧</a>
         </li>
         <li class="nav-item">
           <a class="nav-link contact" href="contact.html">🤙</a>
