--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</script>
 </head>
 <body style="font-family: Bahnschrift; src:local(font.ttf)">
-    <ul class="nav nav-pills">
+    <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
           <a class="nav-link home active" href="#">🏠</a>
         </li>
